--- a/html/settings.css
+++ b/html/settings.css
@@ -1285,7 +1285,7 @@ zoom: 1;
 .tp-loader.spinner0 {
   width: 40px;
   height: 40px;
-  background:url(http://7xl8mc.com1.z0.glb.clouddn.com/assets/loader.gif) no-repeat center center;
+  /*background:url(http://7xl8mc.com1.z0.glb.clouddn.com/assets/loader.gif) no-repeat center center;*/
   background-color: #fff;
   box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.15);
   -webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.15);
